--- a/src/com/v3pm_prototype/view/TabStart.fxml
+++ b/src/com/v3pm_prototype/view/TabStart.fxml
@@ -7,123 +7,74 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="180.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.TabStartController">
-   <children>
-      <Label layoutX="14.0" layoutY="14.0" text="Configuration Overview:">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Label layoutX="14.0" layoutY="49.0" text="Projects">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Label>
-      <TableView layoutX="14.0" layoutY="74.0" prefHeight="200.0" prefWidth="606.0">
-         <columns>
-            <TableColumn prefWidth="117.0" text="Project" />
-            <TableColumn prefWidth="53.0" text="Periods" />
-            <TableColumn prefWidth="76.0" text="Mandatory" />
-            <TableColumn prefWidth="115.0" text="Type" />
-            <TableColumn prefWidth="138.0" text="Investment Outflows" />
-            <TableColumn minWidth="5.0" prefWidth="106.0" text="Fix Costs" />
-         </columns>
-      </TableView>
-      <TableView layoutX="637.0" layoutY="74.0" prefHeight="199.0" prefWidth="548.0">
-         <columns>
-            <TableColumn prefWidth="147.0" text="Process" />
-            <TableColumn prefWidth="68.0" text="Quality" />
-            <TableColumn prefWidth="74.0" text="Time" />
-            <TableColumn prefWidth="89.0" text="Price" />
-            <TableColumn prefWidth="76.0" text="Fix Costs" />
-            <TableColumn minWidth="5.0" prefWidth="93.0" text="Fix Costs" />
-         </columns>
-      </TableView>
-      <Label layoutX="637.0" layoutY="49.0" text="Processes">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Label>
-      <Label layoutX="130.0" layoutY="289.0" text="Solution:">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Label fx:id="lblSolution" layoutX="131.0" layoutY="311.0" prefHeight="25.0" prefWidth="633.0" text="No solution calculated">
-         <font>
-            <Font name="System Italic" size="12.0" />
-         </font>
-      </Label>
-      <Label layoutX="637.0" layoutY="286.0" text="Roadmap">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Label>
-      <StackPane layoutX="638.0" layoutY="317.0" prefHeight="22.0" prefWidth="26.0">
+
+<SplitPane dividerPositions="0.5" prefHeight="400.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.TabStartController">
+   <items>
+      <AnchorPane prefHeight="180.0" prefWidth="200.0">
          <children>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="22.0" stroke="BLACK" strokeType="INSIDE" width="26.0" />
-            <Text fill="#e42222" strokeType="OUTSIDE" strokeWidth="0.0" text="1">
+            <Label layoutX="17.0" layoutY="14.0" text="Scenarios">
                <font>
-                  <Font name="System Bold" size="12.0" />
+                  <Font size="16.0" />
                </font>
-            </Text>
+            </Label>
+            <TableView fx:id="tvScenarios" layoutX="17.0" layoutY="45.0" prefHeight="200.0">
+              <columns>
+                <TableColumn prefWidth="75.0" text="ID" />
+                <TableColumn prefWidth="205.0" text="Name" />
+                  <TableColumn minWidth="0.0" prefWidth="231.0" text="Projects" />
+                  <TableColumn prefWidth="123.0" text="NPV" />
+              </columns>
+            </TableView>
+            <Button fx:id="btnNewScenario" layoutX="17.0" layoutY="262.0" mnemonicParsing="false" onAction="#myAction" text="New Scenario" />
          </children>
-      </StackPane>
-      <StackPane layoutX="666.0" layoutY="317.0" prefHeight="22.0" prefWidth="26.0">
+         <padding>
+            <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
+         </padding>
+      </AnchorPane>
+      <VBox prefHeight="398.0">
          <children>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="22.0" stroke="BLACK" strokeType="INSIDE" width="26.0" />
-            <Text fill="#ffa30e" strokeType="OUTSIDE" strokeWidth="0.0" text="3">
+            <Label text="Projects">
                <font>
-                  <Font name="System Bold" size="12.0" />
+                  <Font size="16.0" />
                </font>
-            </Text>
-         </children>
-      </StackPane>
-      <StackPane layoutX="726.0" layoutY="317.0" prefHeight="22.0" prefWidth="26.0">
-         <children>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="22.0" stroke="BLACK" strokeType="INSIDE" width="26.0" />
-            <Text fill="#ffaa00" strokeType="OUTSIDE" strokeWidth="0.0" text="3">
+            </Label>
+            <TableView fx:id="tvProjects" prefHeight="200.0" prefWidth="436.0">
+               <columns>
+                  <TableColumn fx:id="clmProjectProject" prefWidth="154.0" text="Project" />
+                  <TableColumn fx:id="clmProjectPeriods" prefWidth="59.0" text="Periods" />
+                  <TableColumn fx:id="clmProjectType" prefWidth="105.0" text="Type" />
+               </columns>
+               <VBox.margin>
+                  <Insets bottom="10.0" />
+               </VBox.margin>
+            </TableView>
+            <Button fx:id="btnNewProject" mnemonicParsing="false" text="New Project">
+               <VBox.margin>
+                  <Insets bottom="15.0" />
+               </VBox.margin>
+            </Button>
+            <Label text="Processes">
                <font>
-                  <Font name="System Bold" size="12.0" />
+                  <Font size="16.0" />
                </font>
-            </Text>
+            </Label>
+            <TableView fx:id="tvProcesses" prefHeight="200.0" prefWidth="225.0">
+               <columns>
+                  <TableColumn fx:id="clmProcessProcess" prefWidth="318.0" text="Process" />
+               </columns>
+               <VBox.margin>
+                  <Insets bottom="10.0" />
+               </VBox.margin>
+            </TableView>
+            <Button fx:id="btnNewProcess" mnemonicParsing="false" text="New Process">
+               <VBox.margin>
+                  <Insets bottom="15.0" />
+               </VBox.margin>
+            </Button>
          </children>
-      </StackPane>
-      <StackPane layoutX="698.0" layoutY="317.0" prefHeight="22.0" prefWidth="26.0">
-         <children>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="22.0" stroke="BLACK" strokeType="INSIDE" width="26.0" />
-            <Text fill="#14e34d" strokeType="OUTSIDE" strokeWidth="0.0" text="4">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Text>
-         </children>
-      </StackPane>
-      <StackPane layoutX="786.0" layoutY="317.0" prefHeight="22.0" prefWidth="26.0">
-         <children>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="22.0" stroke="BLACK" strokeType="INSIDE" width="26.0" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" />
-         </children>
-      </StackPane>
-      <StackPane layoutX="758.0" layoutY="317.0" prefHeight="22.0" prefWidth="26.0">
-         <children>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="22.0" stroke="BLACK" strokeType="INSIDE" width="26.0" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" />
-         </children>
-      </StackPane>
-      <Label layoutX="635.0" layoutY="349.0" text="Net Present Value">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Label>
-      <Label fx:id="lblNPV" layoutX="635.0" layoutY="371.0" text="123123" textFill="#1fe118">
-         <font>
-            <Font name="System Bold" size="24.0" />
-         </font>
-      </Label>
-      <Button fx:id="btnStartCalc" layoutX="14.0" layoutY="300.0" mnemonicParsing="false" text="Start calculation" />
-   </children>
-   <padding>
-      <Insets bottom="10.0" />
-   </padding>
-</AnchorPane>
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="10.0" />
+         </padding>
+      </VBox>
+   </items>
+</SplitPane>
