--- a/src/com/v3pm_prototype/view/NewProject.fxml
+++ b/src/com/v3pm_prototype/view/NewProject.fxml
@@ -1,35 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="220.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.NewProjectController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.NewProjectController">
    <children>
-      <Label layoutX="14.0" layoutY="14.0" text="New Project">
+      <Label layoutX="14.0" layoutY="14.0" text="New Project" textFill="#2e8ce4">
          <font>
-            <Font size="24.0" />
+            <Font size="18.0" />
          </font>
       </Label>
-      <Label layoutX="14.0" layoutY="65.0" text="Name:">
+      <Label layoutX="14.0" layoutY="51.0" text="Name:">
          <font>
-            <Font size="16.0" />
+            <Font size="14.0" />
          </font>
       </Label>
-      <TextField fx:id="tfName" layoutX="78.0" layoutY="65.0" prefHeight="25.0" prefWidth="184.0" />
-      <Label layoutX="14.0" layoutY="106.0" text="Type:">
+      <TextField fx:id="tfName" layoutX="85.0" layoutY="49.0" prefHeight="25.0" prefWidth="184.0" />
+      <Label layoutX="14.0" layoutY="84.0" text="Type:">
          <font>
-            <Font size="16.0" />
+            <Font size="14.0" />
          </font>
       </Label>
-      <ChoiceBox fx:id="cbType" layoutX="78.0" layoutY="106.0" prefWidth="150.0" />
-      <Label layoutX="14.0" layoutY="145.0" text="Periods:">
+      <ChoiceBox fx:id="cbType" layoutX="85.0" layoutY="82.0" prefWidth="150.0" />
+      <Label layoutX="14.0" layoutY="118.0" text="Periods:">
          <font>
-            <Font size="16.0" />
+            <Font size="14.0" />
          </font>
       </Label>
-      <TextField fx:id="tfPeriods" layoutX="79.0" layoutY="145.0" prefHeight="25.0" prefWidth="46.0" />
-      <Button fx:id="btnCreate" layoutX="90.0" layoutY="181.0" mnemonicParsing="false" onAction="#createProject" prefHeight="25.0" prefWidth="220.0" text="Create" />
+      <TextField fx:id="tfPeriods" layoutX="85.0" layoutY="115.0" prefHeight="25.0" prefWidth="46.0" />
+      <Button fx:id="btnCreate" layoutX="90.0" layoutY="158.0" mnemonicParsing="false" onAction="#createProject" prefHeight="25.0" prefWidth="220.0" text="Create" />
    </children>
+   <padding>
+      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+   </padding>
 </AnchorPane>
