--- a/src/com/v3pm_prototype/view/TabStart.fxml
+++ b/src/com/v3pm_prototype/view/TabStart.fxml
@@ -9,7 +9,7 @@
 
 <SplitPane dividerPositions="0.5" prefHeight="400.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.TabStartController">
    <items>
-      <AnchorPane prefHeight="180.0" prefWidth="200.0">
+      <AnchorPane maxWidth="1.7976931348623157E308" prefHeight="180.0" prefWidth="1000.0">
          <children>
             <Label layoutX="17.0" layoutY="14.0" text="Scenarios">
                <font>
@@ -30,7 +30,7 @@
             <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
          </padding>
       </AnchorPane>
-      <VBox prefHeight="398.0">
+      <VBox fillWidth="false" prefHeight="398.0">
          <children>
             <Label text="Projects">
                <font>
