--- a/src/com/v3pm_prototype/view/TabStart.fxml
+++ b/src/com/v3pm_prototype/view/TabStart.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<SplitPane dividerPositions="0.5" prefHeight="400.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.TabStartController">
+<SplitPane dividerPositions="0.6452420701168614" minHeight="500.0" minWidth="1200.0" prefHeight="400.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.TabStartController">
    <items>
       <AnchorPane maxWidth="1.7976931348623157E308" prefHeight="180.0" prefWidth="1000.0">
          <children>
@@ -24,7 +24,7 @@
                   <TableColumn prefWidth="123.0" text="NPV" />
               </columns>
             </TableView>
-            <Button fx:id="btnNewScenario" layoutX="17.0" layoutY="262.0" mnemonicParsing="false" onAction="#myAction" text="New Scenario" />
+            <Button fx:id="btnNewScenario" layoutX="17.0" layoutY="254.0" mnemonicParsing="false" onAction="#openNewScenarioWindow" text="New Scenario" />
          </children>
          <padding>
             <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
@@ -41,7 +41,8 @@
                <columns>
                   <TableColumn fx:id="clmProjectProject" prefWidth="154.0" text="Project" />
                   <TableColumn fx:id="clmProjectPeriods" prefWidth="59.0" text="Periods" />
-                  <TableColumn fx:id="clmProjectType" prefWidth="105.0" text="Type" />
+                  <TableColumn fx:id="clmProjectType" prefWidth="86.0" text="Type" />
+                  <TableColumn fx:id="clmProjectProcess" prefWidth="124.0" text="Process" />
                </columns>
                <VBox.margin>
                   <Insets bottom="10.0" />
@@ -57,9 +58,9 @@
                   <Font size="16.0" />
                </font>
             </Label>
-            <TableView fx:id="tvProcesses" prefHeight="200.0" prefWidth="225.0">
+            <TableView fx:id="tvProcesses" prefHeight="103.0" prefWidth="436.0">
                <columns>
-                  <TableColumn fx:id="clmProcessProcess" prefWidth="318.0" text="Process" />
+                  <TableColumn fx:id="clmProcessProcess" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="409.0" text="Process" />
                </columns>
                <VBox.margin>
                   <Insets bottom="10.0" />
