--- a/src/com/v3pm_prototype/view/AddProcess.fxml
+++ b/src/com/v3pm_prototype/view/AddProcess.fxml
@@ -110,6 +110,7 @@
             </AnchorPane>
          </content>
       </TitledPane>
+      <Button fx:id="btnAddProcess" mnemonicParsing="false" onAction="#createSceneProcess" text="Add Process to Scenario" />
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
