--- a/src/com/v3pm_prototype/view/AddProcess.fxml
+++ b/src/com/v3pm_prototype/view/AddProcess.fxml
@@ -6,7 +6,6 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="560.0" prefWidth="840.0" spacing="10.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.AddProcessController">
    <children>
       <Label fx:id="lblProcessName" text="Process name is here" textFill="#2e8ce4">
@@ -19,10 +18,10 @@
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
                   <Label layoutX="61.0" layoutY="17.0" text="Price" />
-                  <TextField fx:id="tfP" layoutX="14.0" layoutY="44.0" prefWidth="120.0" />
+                  <TextField fx:id="tfP" layoutX="14.0" layoutY="44.0" prefWidth="120.0" text="0" />
                   <Label layoutX="200.0" layoutY="17.0" text="Operating Outflow" />
-                  <TextField fx:id="tfOop" layoutX="190.0" layoutY="44.0" prefWidth="120.0" />
-                  <TextField fx:id="tfFixedCosts" layoutX="377.0" layoutY="44.0" prefWidth="120.0" />
+                  <TextField fx:id="tfOop" layoutX="190.0" layoutY="44.0" prefWidth="120.0" text="0" />
+                  <TextField fx:id="tfFixedCosts" layoutX="377.0" layoutY="44.0" prefWidth="120.0" text="0" />
                   <Label layoutX="413.0" layoutY="17.0" text="Fix Costs" />
                </children>
             </AnchorPane>
@@ -34,12 +33,12 @@
                <children>
                   <Label layoutX="44.0" layoutY="14.0" text="Current Quality" />
                   <Slider fx:id="slQ" layoutX="14.0" layoutY="35.0" showTickLabels="true" showTickMarks="true" value="50.0" />
-                  <Slider fx:id="slQMin" layoutX="182.0" layoutY="35.0" showTickLabels="true" showTickMarks="true" value="50.0" />
+                  <Slider fx:id="slQMin" layoutX="182.0" layoutY="35.0" showTickLabels="true" showTickMarks="true" />
                   <Label layoutX="206.0" layoutY="14.0" text="Minimum Quality" />
                   <Label layoutX="384.0" layoutY="9.0" text="Maximum Quality" />
-                  <Slider fx:id="slQMax" layoutX="361.0" layoutY="35.0" showTickLabels="true" showTickMarks="true" value="50.0" />
+                  <Slider fx:id="slQMax" layoutX="361.0" layoutY="35.0" showTickLabels="true" showTickMarks="true" value="100.0" />
                   <Label layoutX="534.0" layoutY="9.0" text="Degeneration Factor" />
-                  <TextField fx:id="tfDegQ" layoutX="549.0" layoutY="31.0" prefWidth="80.0" />
+                  <TextField fx:id="tfDegQ" layoutX="549.0" layoutY="31.0" prefWidth="80.0" text="0" />
                </children>
             </AnchorPane>
         </content>
@@ -49,10 +48,10 @@
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
                   <Label layoutX="40.0" layoutY="17.0" text="Current Time" />
-                  <TextField fx:id="tfT" layoutX="14.0" layoutY="44.0" prefWidth="120.0" />
+                  <TextField fx:id="tfT" layoutX="14.0" layoutY="44.0" prefWidth="120.0" text="0" />
                   <Label layoutX="209.0" layoutY="17.0" text="Maximum Time" />
-                  <TextField fx:id="tfTMax" layoutX="190.0" layoutY="44.0" prefWidth="120.0" />
-                  <TextField fx:id="tfDegT" layoutX="403.0" layoutY="44.0" prefWidth="80.0" />
+                  <TextField fx:id="tfTMax" layoutX="190.0" layoutY="44.0" prefWidth="120.0" text="0" />
+                  <TextField fx:id="tfDegT" layoutX="403.0" layoutY="44.0" prefWidth="80.0" text="0" />
                   <Label layoutX="388.0" layoutY="17.0" text="Degeneration Factor" />
                </children>
             </AnchorPane>
@@ -62,13 +61,13 @@
          <content>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
-                  <TextField fx:id="tfDMP" layoutX="14.0" layoutY="27.0" prefWidth="120.0" />
+                  <TextField fx:id="tfDMP" layoutX="14.0" layoutY="27.0" prefWidth="120.0" text="0" />
                   <Label layoutX="142.0" layoutY="20.0" text="+">
                      <font>
                         <Font size="24.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="tfDMLambda" layoutX="175.0" layoutY="27.0" prefWidth="120.0" />
+                  <TextField fx:id="tfDMLambda" layoutX="175.0" layoutY="27.0" prefWidth="120.0" text="0" />
                   <Label layoutX="303.0" layoutY="27.0" text="*">
                      <font>
                         <Font size="24.0" />
@@ -79,7 +78,7 @@
                         <Font size="24.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="tfDMAlpha" layoutX="338.0" layoutY="27.0" prefWidth="49.0" />
+                  <TextField fx:id="tfDMAlpha" layoutX="338.0" layoutY="27.0" prefWidth="49.0" text="0" />
                   <Label layoutX="395.0" layoutY="27.0" text="*">
                      <font>
                         <Font size="24.0" />
@@ -91,7 +90,7 @@
                         <Font size="24.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="tfDMBeta" layoutX="556.0" layoutY="27.0" prefWidth="49.0" />
+                  <TextField fx:id="tfDMBeta" layoutX="556.0" layoutY="27.0" prefWidth="49.0" text="0" />
                   <ComboBox fx:id="cbDMFktT" layoutX="637.0" layoutY="27.0" prefWidth="96.0" />
                   <Label layoutX="613.0" layoutY="27.0" text="*">
                      <font>
