--- a/src/com/v3pm_prototype/view/AddProject.fxml
+++ b/src/com/v3pm_prototype/view/AddProject.fxml
@@ -64,9 +64,8 @@
                   </AnchorPane>
                   <AnchorPane fx:id="apB" maxHeight="-Infinity" minHeight="0.0" minWidth="0.0" prefHeight="70.0" prefWidth="504.0">
                      <children>
-                        <Label layoutX="14.0" layoutY="4.0" prefHeight="17.0" prefWidth="277.0" text="Effect on Investment Outflows of future projects" />
+                        <Label layoutX="14.0" layoutY="4.0" prefHeight="17.0" prefWidth="315.0" text="Relative Effect on Investment Outflows of future projects" />
                         <TextField fx:id="tfB" layoutX="14.0" layoutY="31.0" prefWidth="120.0" />
-                        <ToggleButton fx:id="tbB" layoutX="140.0" layoutY="31.0" mnemonicParsing="false" text="is relative" />
                      </children>
                   </AnchorPane>
                   <AnchorPane fx:id="apE" maxHeight="-Infinity" minHeight="0.0" minWidth="0.0" prefHeight="70.0" prefWidth="504.0">
@@ -93,7 +92,7 @@
             </VBox>
          </content>
       </TitledPane>
-      <Button fx:id="btnAddProcess" mnemonicParsing="false" onAction="#createSceneProcess" text="Add Project to Scenario" />
+      <Button fx:id="btnAddProcess" mnemonicParsing="false" text="Add Project to Scenario" />
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
