--- a/src/com/v3pm_prototype/view/AddProcess.fxml
+++ b/src/com/v3pm_prototype/view/AddProcess.fxml
@@ -6,14 +6,20 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="560.0" prefWidth="840.0" spacing="10.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.AddProcessController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="840.0" spacing="10.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.AddProcessController">
    <children>
-      <Label fx:id="lblProcessName" text="Process name is here" textFill="#2e8ce4">
+      <Label text="Definition of a new Process" textFill="#2e8ce4">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <TitledPane animated="false" collapsible="false" prefHeight="112.0" prefWidth="940.0" text="General Settings">
+      <FlowPane hgap="10.0" prefWidth="200.0">
+         <children>
+            <Label text="Name: " />
+            <TextField fx:id="tfName" />
+         </children>
+      </FlowPane>
+      <TitledPane animated="false" collapsible="false" prefHeight="112.0" prefWidth="940.0" text="Price Settings">
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
@@ -31,14 +37,11 @@
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
-                  <Label layoutX="44.0" layoutY="14.0" text="Current Quality" />
-                  <Slider fx:id="slQ" layoutX="14.0" layoutY="35.0" showTickLabels="true" showTickMarks="true" value="50.0" />
-                  <Slider fx:id="slQMin" layoutX="182.0" layoutY="35.0" showTickLabels="true" showTickMarks="true" />
-                  <Label layoutX="206.0" layoutY="14.0" text="Minimum Quality" />
-                  <Label layoutX="384.0" layoutY="9.0" text="Maximum Quality" />
-                  <Slider fx:id="slQMax" layoutX="361.0" layoutY="35.0" showTickLabels="true" showTickMarks="true" value="100.0" />
+                  <Label layoutX="44.0" layoutY="14.0" text="Current Quality: " />
+                  <Slider fx:id="slQ" blockIncrement="1.0" layoutX="14.0" layoutY="35.0" minorTickCount="24" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="50.0" />
                   <Label layoutX="534.0" layoutY="9.0" text="Degeneration Factor" />
                   <TextField fx:id="tfDegQ" layoutX="549.0" layoutY="31.0" prefWidth="80.0" text="0" />
+                  <Label fx:id="lblQ" layoutX="174.0" layoutY="14.0" text="50%" />
                </children>
             </AnchorPane>
         </content>
@@ -49,8 +52,6 @@
                <children>
                   <Label layoutX="40.0" layoutY="17.0" text="Current Time" />
                   <TextField fx:id="tfT" layoutX="14.0" layoutY="44.0" prefWidth="120.0" text="0" />
-                  <Label layoutX="209.0" layoutY="17.0" text="Maximum Time" />
-                  <TextField fx:id="tfTMax" layoutX="190.0" layoutY="44.0" prefWidth="120.0" text="0" />
                   <TextField fx:id="tfDegT" layoutX="403.0" layoutY="44.0" prefWidth="80.0" text="0" />
                   <Label layoutX="388.0" layoutY="17.0" text="Degeneration Factor" />
                </children>
@@ -110,7 +111,7 @@
             </AnchorPane>
          </content>
       </TitledPane>
-      <Button fx:id="btnAddProcess" mnemonicParsing="false" onAction="#createSceneProcess" text="Add Process to Scenario" />
+      <Button fx:id="btnAddProcess" mnemonicParsing="false" onAction="#createProcess" text="Create Process" />
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
