--- a/src/com/v3pm_prototype/view/AddProject.fxml
+++ b/src/com/v3pm_prototype/view/AddProject.fxml
@@ -8,11 +8,17 @@
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="546.0" spacing="10.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.AddProjectController">
    <children>
-      <Label fx:id="lblProjectName" text="Project name is here" textFill="#2e8ce4">
+      <Label fx:id="lblProjectName" text="Definition of a new Project" textFill="#2e8ce4">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
+      <FlowPane hgap="10.0" prefWidth="200.0">
+         <children>
+            <Label text="Name: " />
+            <TextField fx:id="tfName" />
+         </children>
+      </FlowPane>
       <TitledPane animated="false" collapsible="false" prefHeight="112.0" prefWidth="940.0" text="General Infos">
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
@@ -20,21 +26,9 @@
                   <Label layoutX="24.0" layoutY="17.0" text="Number of Periods" />
                   <Label layoutX="237.0" layoutY="17.0" text="Type" />
                   <Label layoutX="393.0" layoutY="17.0" text="Affected Process" />
-                  <Label fx:id="lblPeriods" alignment="CENTER" layoutX="62.0" layoutY="34.0" prefHeight="20.0" prefWidth="25.0" text="1" textAlignment="CENTER">
-                     <font>
-                        <Font name="System Bold" size="18.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="lblType" alignment="CENTER" layoutX="184.0" layoutY="34.0" prefHeight="27.0" prefWidth="133.0" text="process level" textAlignment="CENTER">
-                     <font>
-                        <Font name="System Bold" size="18.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="lblAffectedProcess" alignment="CENTER" layoutX="355.0" layoutY="34.0" prefHeight="27.0" prefWidth="164.0" text="Standardization" textAlignment="CENTER">
-                     <font>
-                        <Font name="System Bold" size="18.0" />
-                     </font>
-                  </Label>
+                  <TextField fx:id="tfPeriods" layoutX="24.0" layoutY="39.0" prefWidth="120.0" text="1" />
+                  <ComboBox fx:id="cbType" layoutX="187.0" layoutY="40.0" prefWidth="150.0" />
+                  <ComboBox fx:id="cbAffectedProcess" layoutX="384.0" layoutY="40.0" prefWidth="150.0" />
                </children>
             </AnchorPane>
         </content>
@@ -45,8 +39,8 @@
                <children>
                   <Label layoutX="29.0" layoutY="14.0" text="Investment Outflows" />
                   <Label layoutX="222.0" layoutY="14.0" text="Fixed Costs" />
-                  <TextField fx:id="tfOInv" layoutX="23.0" layoutY="34.0" prefWidth="120.0" />
-                  <TextField fx:id="tfFixedCosts" layoutX="192.0" layoutY="34.0" prefWidth="120.0" />
+                  <TextField fx:id="tfOInv" layoutX="23.0" layoutY="34.0" prefWidth="120.0" text="0" />
+                  <TextField fx:id="tfFixedCosts" layoutX="192.0" layoutY="34.0" prefWidth="120.0" text="0" />
                </children>
             </AnchorPane>
         </content>
@@ -58,41 +52,41 @@
                   <AnchorPane fx:id="apA" minHeight="0.0" minWidth="0.0" prefHeight="70.0" prefWidth="504.0">
                      <children>
                         <Label layoutX="14.0" layoutY="4.0" prefHeight="17.0" prefWidth="224.0" text="Effect on process spec. Operating Otflows" />
-                        <TextField fx:id="tfA" layoutX="14.0" layoutY="31.0" prefWidth="120.0" />
+                        <TextField fx:id="tfA" layoutX="14.0" layoutY="31.0" prefWidth="120.0" text="0" />
                         <ToggleButton fx:id="tbA" layoutX="140.0" layoutY="31.0" mnemonicParsing="false" text="is relative" />
                      </children>
                   </AnchorPane>
                   <AnchorPane fx:id="apB" maxHeight="-Infinity" minHeight="0.0" minWidth="0.0" prefHeight="70.0" prefWidth="504.0">
                      <children>
                         <Label layoutX="14.0" layoutY="4.0" prefHeight="17.0" prefWidth="315.0" text="Relative Effect on Investment Outflows of future projects" />
-                        <TextField fx:id="tfB" layoutX="14.0" layoutY="31.0" prefWidth="120.0" />
+                        <TextField fx:id="tfB" layoutX="14.0" layoutY="31.0" prefWidth="120.0" text="0" />
                      </children>
                   </AnchorPane>
                   <AnchorPane fx:id="apE" maxHeight="-Infinity" minHeight="0.0" minWidth="0.0" prefHeight="70.0" prefWidth="504.0">
                      <children>
                         <Label layoutX="14.0" layoutY="4.0" prefHeight="17.0" prefWidth="277.0" text="Effect on process spec. time" />
-                        <TextField fx:id="tfE" layoutX="14.0" layoutY="31.0" prefWidth="120.0" />
+                        <TextField fx:id="tfE" layoutX="14.0" layoutY="31.0" prefWidth="120.0" text="0" />
                         <ToggleButton fx:id="tbE" layoutX="140.0" layoutY="31.0" mnemonicParsing="false" text="is relative" />
                      </children>
                   </AnchorPane>
                   <AnchorPane fx:id="apU" maxHeight="-Infinity" minHeight="0.0" minWidth="0.0" prefHeight="70.0" prefWidth="504.0">
                      <children>
                         <Label layoutX="14.0" layoutY="4.0" prefHeight="17.0" prefWidth="277.0" text="Effect on process spec. quality" />
-                        <TextField fx:id="tfU" layoutX="14.0" layoutY="31.0" prefWidth="120.0" />
+                        <TextField fx:id="tfU" layoutX="14.0" layoutY="31.0" prefWidth="120.0" text="0" />
                         <ToggleButton fx:id="tbU" layoutX="140.0" layoutY="31.0" mnemonicParsing="false" text="is relative" />
                      </children>
                   </AnchorPane>
                   <AnchorPane fx:id="apM" maxHeight="-Infinity" minHeight="0.0" minWidth="0.0" prefHeight="70.0" prefWidth="504.0">
                      <children>
                         <Label layoutX="14.0" layoutY="4.0" prefHeight="17.0" prefWidth="277.0" text="Absolute Effect on process spec. Fixed Outflows" />
-                        <TextField fx:id="tfM" layoutX="14.0" layoutY="31.0" prefWidth="120.0" />
+                        <TextField fx:id="tfM" layoutX="14.0" layoutY="31.0" prefWidth="120.0" text="0" />
                      </children>
                   </AnchorPane>
                </children>
             </VBox>
          </content>
       </TitledPane>
-      <Button fx:id="btnAddProcess" mnemonicParsing="false" text="Add Project to Scenario" />
+      <Button fx:id="btnAddProject" mnemonicParsing="false" onAction="#createProject" text="Add Project to Scenario" />
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
