--- a/src/com/v3pm_prototype/view/TabStart.fxml
+++ b/src/com/v3pm_prototype/view/TabStart.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<SplitPane dividerPositions="0.6452420701168614" minHeight="500.0" minWidth="1200.0" prefHeight="400.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.TabStartController">
+<SplitPane dividerPositions="0.5575959933222037" minHeight="500.0" minWidth="1200.0" prefHeight="400.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.TabStartController">
    <items>
       <AnchorPane maxWidth="1.7976931348623157E308" prefHeight="180.0" prefWidth="1000.0">
          <children>
@@ -37,18 +37,25 @@
                   <Font size="16.0" />
                </font>
             </Label>
-            <TableView fx:id="tvProjects" prefHeight="200.0" prefWidth="436.0">
-               <columns>
-                  <TableColumn fx:id="clmProjectProject" prefWidth="154.0" text="Project" />
-                  <TableColumn fx:id="clmProjectPeriods" prefWidth="59.0" text="Periods" />
-                  <TableColumn fx:id="clmProjectType" prefWidth="86.0" text="Type" />
-                  <TableColumn fx:id="clmProjectProcess" prefWidth="124.0" text="Process" />
-               </columns>
+            <TableView fx:id="tvProjects" prefHeight="200.0" prefWidth="565.0">
                <VBox.margin>
                   <Insets bottom="10.0" />
                </VBox.margin>
+               <columns>
+                  <TableColumn fx:id="clmProjectsProject" editable="false" prefWidth="258.0" text="Project" />
+                  <TableColumn fx:id="clmProjectsPeriods" editable="false" minWidth="0.0" prefWidth="73.0" text="Periods" />
+                  <TableColumn fx:id="clmProjectsType" editable="false" prefWidth="136.0" text="Type" />
+                  <TableColumn fx:id="clmProjectsProcess" prefWidth="205.0" text="Process" />
+                  <TableColumn fx:id="clmProjectsFixCosts" prefWidth="122.0" text="FixCosts" />
+                  <TableColumn fx:id="clmProjectsOInv" prefWidth="125.0" text="OInv" />
+                  <TableColumn fx:id="clmProjectsA" prefWidth="51.0" text="a" />
+                  <TableColumn fx:id="clmProjectsB" prefWidth="47.0" text="b" />
+                  <TableColumn fx:id="clmProjectsE" prefWidth="51.0" text="e" />
+                  <TableColumn fx:id="clmProjectsU" prefWidth="49.0" text="u" />
+                  <TableColumn fx:id="clmProjectsM" prefWidth="54.0" text="m" />
+               </columns>
             </TableView>
-            <Button fx:id="btnNewProject" mnemonicParsing="false" onAction="#openNewProjectWindow" text="New Project">
+            <Button fx:id="btnNewProject" mnemonicParsing="false" onAction="#openAddProjectWindow" text="New Project">
                <VBox.margin>
                   <Insets bottom="15.0" />
                </VBox.margin>
@@ -58,15 +65,23 @@
                   <Font size="16.0" />
                </font>
             </Label>
-            <TableView fx:id="tvProcesses" prefHeight="103.0" prefWidth="436.0">
-               <columns>
-                  <TableColumn fx:id="clmProcessProcess" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="409.0" text="Process" />
-               </columns>
+            <TableView fx:id="tvProcesses" prefHeight="103.0" prefWidth="542.0">
                <VBox.margin>
                   <Insets bottom="10.0" />
                </VBox.margin>
+               <columns>
+                  <TableColumn fx:id="clmProcessesProcess" editable="false" prefWidth="258.0" text="Process" />
+                  <TableColumn fx:id="clmProcessesFixCosts" prefWidth="96.0" text="FixCosts" />
+                  <TableColumn fx:id="clmProcessesQ" editable="false" minWidth="0.0" prefWidth="65.0" text="q" />
+                  <TableColumn fx:id="clmProcessesT" prefWidth="57.0" text="t" />
+                  <TableColumn fx:id="clmProcessesP" prefWidth="70.0" text="Preis" />
+                  <TableColumn fx:id="clmProcessesOop" prefWidth="91.0" text="OOp" />
+                  <TableColumn fx:id="clmProcessesDGQ" prefWidth="62.0" text="d(q)" />
+                  <TableColumn fx:id="clmProcessesDGT" prefWidth="68.0" text="v(t)" />
+                  <TableColumn fx:id="clmProcessesDFKT" prefWidth="181.0" text="NachfrageFunktion" />
+               </columns>
             </TableView>
-            <Button fx:id="btnNewProcess" mnemonicParsing="false" onAction="#openNewProcessWindow" text="New Process">
+            <Button fx:id="btnNewProcess" mnemonicParsing="false" onAction="#openAddProcessWindow" text="New Process">
                <VBox.margin>
                   <Insets bottom="15.0" />
                </VBox.margin>
