--- a/src/com/v3pm_prototype/view/AddConstraint.fxml
+++ b/src/com/v3pm_prototype/view/AddConstraint.fxml
@@ -15,21 +15,21 @@
                   <Font size="24.0" />
                </font>
             </Label>
-            <ComboBox fx:id="cbS" prefWidth="150.0" promptText="s" />
+            <ComboBox fx:id="cbS" prefWidth="150.0" promptText="Project s" />
             <TextField fx:id="tfX" prefWidth="150.0" promptText="Critical boundary x" />
             <Label fx:id="lblComma1" text=" , ">
                <font>
                   <Font name="System Bold" size="24.0" />
                </font>
             </Label>
-            <ComboBox fx:id="cbSI" prefWidth="150.0" promptText="s'" />
-            <ComboBox fx:id="cbI" prefWidth="150.0" promptText="i" />
+            <ComboBox fx:id="cbSI" prefWidth="150.0" promptText="Project s'" />
+            <ComboBox fx:id="cbI" prefWidth="150.0" promptText="Process i" />
             <Label fx:id="lblComma2" text=" , ">
                <font>
                   <Font name="System Bold" size="24.0" />
                </font>
             </Label>
-            <TextField fx:id="tfY" prefWidth="150.0" promptText="Period y" />
+            <ComboBox fx:id="cbY" prefWidth="150.0" promptText="Period y" />
             <Label text=" )">
                <font>
                   <Font size="24.0" />
@@ -42,7 +42,7 @@
       </HBox>
       <BorderPane prefWidth="200.0">
          <bottom>
-            <Button alignment="CENTER" mnemonicParsing="false" text="Add Constraint" BorderPane.alignment="CENTER" />
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#addConstraint" text="Add Constraint" BorderPane.alignment="CENTER" />
          </bottom>
          <padding>
             <Insets bottom="14.0" />
