--- a/src/com/v3pm_prototype/view/NewScenario.fxml
+++ b/src/com/v3pm_prototype/view/NewScenario.fxml
@@ -8,20 +8,48 @@
 
 <AnchorPane maxWidth="-Infinity" minHeight="0" minWidth="0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.NewScenarioController">
    <children>
-      <Label layoutX="14.0" layoutY="14.0" text="New Scenario" textFill="#2e8ce4">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="14.0" layoutY="63.0" text="Name:" />
-      <TextField fx:id="tfName" layoutX="75.0" layoutY="57.0" promptText="Enter Scenario Name" />
-      <SplitPane dividerPositions="0.76" layoutY="107.0">
+      <SplitPane dividerPositions="0.76" layoutY="48.0">
          <items>
             <TabPane>
                <tabs>
+                  <Tab text="General Settings">
+                     <content>
+                        <VBox prefHeight="200.0" prefWidth="100.0" spacing="26.0">
+                           <children>
+                              <HBox prefWidth="200.0" spacing="10.0">
+                                 <children>
+                                    <Label alignment="TOP_LEFT" text="Number of periods:" />
+                                    <ComboBox fx:id="cbPeriods" prefWidth="150.0" />
+                                 </children>
+                              </HBox>
+                              <HBox prefWidth="200.0" spacing="10.0">
+                                 <children>
+                                    <Label alignment="TOP_LEFT" text="Slots per period:" />
+                                    <ComboBox fx:id="cbSlotsPerPeriod" prefWidth="150.0" />
+                                 </children>
+                              </HBox>
+                              <HBox prefWidth="200.0" spacing="10.0">
+                                 <children>
+                                    <Label alignment="TOP_LEFT" text="Discount rate:" />
+                                    <TextField fx:id="tfDiscountRate" prefHeight="39.0" prefWidth="120.0" />
+                                 </children>
+                              </HBox>
+                              <HBox prefWidth="200.0" spacing="10.0">
+                                 <children>
+                                    <Label alignment="TOP_LEFT" text="Overarching fixed outflows:" />
+                                    <TextField fx:id="tfOAFixedOutflows" prefHeight="39.0" prefWidth="120.0" />
+                                 </children>
+                              </HBox>
+                           </children>
+                           <padding>
+                              <Insets bottom="14.0" left="14.0" right="14.0" top="14.0" />
+                           </padding>
+                        </VBox>
+                     </content>
+                  </Tab>
                   <Tab closable="false" text="Project and Process Setup">
                      <content>
-                        <VBox layoutX="12.0" layoutY="108.0" spacing="10.0">
+                        <VBox layoutX="12.0" layoutY="108.0" prefHeight="662.0" prefWidth="1170.0" spacing="10.0">
                            <children>
                               <Label layoutX="12.0" layoutY="108.0" text="Process list" />
                               <TableView fx:id="tvProcesses" editable="true" layoutX="14.0" layoutY="141.0" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="256.0" prefWidth="1172.0">
@@ -60,7 +88,7 @@
                         </VBox>
                      </content>
                   </Tab>
-                  <Tab text="Constraint Setup">
+                  <Tab closable="false" text="Constraint Setup">
                      <content>
                         <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0">
                            <padding>
@@ -128,8 +156,15 @@
             </VBox>
          </items>
       </SplitPane>
+      <VBox layoutY="-7.0" prefHeight="55.0" prefWidth="1518.0">
+         <children>
+            <ToolBar layoutY="-7.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="55.0">
+              <items>
+                <Button fx:id="btnCreateScenario" mnemonicParsing="false" onAction="#createScenario" text="Create Scenario" />
+                  <TextField fx:id="tfName" nodeOrientation="LEFT_TO_RIGHT" promptText="Enter Scenario Name" />
+              </items>
+            </ToolBar>
+         </children>
+      </VBox>
    </children>
-   <padding>
-      <Insets bottom="10.0" top="10.0" />
-   </padding>
 </AnchorPane>
