--- a/src/com/v3pm_prototype/view/TabStart.fxml
+++ b/src/com/v3pm_prototype/view/TabStart.fxml
@@ -26,6 +26,7 @@
               </columns>
             </TableView>
             <Button fx:id="btnNewScenario" layoutX="17.0" layoutY="254.0" mnemonicParsing="false" onAction="#openNewScenarioWindow" text="New Scenario" />
+            <Button fx:id="btnCalculateScenario" layoutX="161.0" layoutY="254.0" mnemonicParsing="false" onAction="#calculateScenario" text="Calculate Scenario" />
          </children>
          <padding>
             <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
