--- a/src/com/v3pm_prototype/view/V3PMGUI.fxml
+++ b/src/com/v3pm_prototype/view/V3PMGUI.fxml
@@ -34,16 +34,11 @@
     </MenuBar>
       <BorderPane prefHeight="592.0" prefWidth="1200.0">
          <center>
-            <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+            <TabPane fx:id="tpMain" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
               <tabs>
-                <Tab text="Start">
+                <Tab text="Universe Overview">
                   <content>
                   	<fx:include fx:id="tabStart" source="TabStart.fxml" />
-                  </content>
-                </Tab>
-                <Tab text="Roadmap Analysis">
-                  <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
                   </content>
                 </Tab>
               </tabs>
